Fix more tipping QA issues (#1366)
* Fix clipped badge

* Fetch all supporting data for logged in user (until new endpoint for ssender<>receiver exists)

* Fix user list follow icon and font sizes

* Remove confimr tip cta when spinner shows

* Fix styling issues

* Add supporting tile gradient layer

* Refactor gold badge icon image

* Refactor and fix disabled button size

--- a/apps/audius-client/packages/web/src/components/tipping/tip-audio/TipAudio.module.css
+++ b/apps/audius-client/packages/web/src/components/tipping/tip-audio/TipAudio.module.css
@@ -252,6 +252,9 @@
 .disabled {
   cursor: unset;
 }
+.confirmButton.disabled {
+  width: 186px;
+}
 
 .loadingSpinner {
   height: 24px;
